--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -1,18 +1,33 @@
 [project]
-name = "blank-project"
-description = "Create a project from scratch: Start from a blank scaffold for your next Clarity contract"
+name = 'blank-project'
+description = 'Create a project from scratch: Start from a blank scaffold for your next Clarity contract'
 authors = []
 telemetry = true
-cache_dir = "./.cache"
+cache_dir = './.cache'
+requirements = []
+[contracts.extension-trait]
+path = 'contracts/extension-trait.clar'
+clarity_version = 3
+epoch = 3.1
 
-# [contracts.CHANGE-THIS-TO-YOUR-CONTRACT-NAME]
-# path = "contracts/CHANGE-THIS-TO-YOUR-CONTRACT-NAME.clar"
+[contracts.sip-013-trait]
+path = 'contracts/sip-013-trait.clar'
+clarity_version = 3
+epoch = 3.1
 
+[contracts.smart-wallet]
+path = 'contracts/smart-wallet.clar'
+clarity_version = 3
+epoch = 3.1
 [repl.analysis]
-passes = ["check_checker"]
+passes = ['check_checker']
 
 [repl.analysis.check_checker]
 strict = false
 trusted_sender = false
 trusted_caller = false
 callee_filter = false
+
+[repl.remote_data]
+enabled = false
+api_url = 'https://api.hiro.so'
