--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -10,6 +10,16 @@ path = 'contracts/extension-trait.clar'
 clarity_version = 3
 epoch = 3.1
 
+[contracts.sip-009-trait]
+path = 'contracts/sip-009-trait.clar'
+clarity_version = 3
+epoch = 3.1
+
+[contracts.sip-010-trait]
+path = 'contracts/sip-010-trait.clar'
+clarity_version = 3
+epoch = 3.1
+
 [contracts.sip-013-trait]
 path = 'contracts/sip-013-trait.clar'
 clarity_version = 3
