--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -29,6 +29,11 @@ epoch = 3.1
 path = 'contracts/smart-wallet.clar'
 clarity_version = 3
 epoch = 3.1
+
+[contracts.smart-wallet-trait]
+path = 'contracts/smart-wallet-trait.clar'
+clarity_version = 3
+epoch = 3.1
 [repl.analysis]
 passes = ['check_checker']
 
