--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
   "deno.enable": false,
-  "files.eol": "\n"
+  "files.eol": "\n",
+  "githubPullRequests.ignoredPullRequestBranches": [
+    "main"
+  ]
 }
