--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -4,7 +4,9 @@ description = 'Create a project from scratch: Start from a blank scaffold for yo
 authors = []
 telemetry = true
 cache_dir = './.cache'
-requirements = []
+
+[[project.requirements]]
+contract_id = 'SPDBEG5X8XD50SPM1JJH0E5CTXGDV5NJTKAKKR5V.sip013-semi-fungible-token-trait'
 [contracts.extension-trait]
 path = 'contracts/extension-trait.clar'
 clarity_version = 3
