--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -7,6 +7,11 @@ cache_dir = './.cache'
 
 [[project.requirements]]
 contract_id = 'SPDBEG5X8XD50SPM1JJH0E5CTXGDV5NJTKAKKR5V.sip013-semi-fungible-token-trait'
+[contracts.ext-delegate-stx-pox-4]
+path = 'contracts/ext-delegate-stx-pox-4.clar'
+clarity_version = 3
+epoch = 3.1
+
 [contracts.extension-trait]
 path = 'contracts/extension-trait.clar'
 clarity_version = 3
